--- a/package.json
+++ b/package.json
@@ -1,51 +1,50 @@
 {
-  "name": "angular2-quickstart",
+  "name": "angular2-sass-gulp-heroku-boilerplate",
   "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "description": "Sample Angular2 application with gulp, sass and heroku integrated workflow.",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "docker-build": "docker build -t ng2-quickstart .",
-    "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
-    "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
+    "start": "gulp cleanup && tsc && http-server build -p",
+    "dev": "gulp clean && gulp cleanup && tsc && concurrently \"tsc -w\" \"lite-server -c bs-config.json\" \"gulp watch\"",
     "lint": "tslint ./app/**/*.ts -t verbose",
-    "lite": "lite-server",
-    "postinstall": "typings install",
+    "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
+    "postinstall": "node node_modules/typings/dist/bin.js install",
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings",
     "webdriver:update": "webdriver-manager update"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "a2-in-memory-web-api": "^0.1.17",
     "angular2": "2.0.0-beta.17",
-    "systemjs": "0.19.26",
+    "bootstrap-sass": "^3.3.6",
     "es6-shim": "^0.35.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-typescript": "^2.13.0",
+    "http-server": "^0.9.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-
-    "a2-in-memory-web-api": "^0.1.17",
-    "bootstrap": "^3.3.6"
-  },
-  "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
+    "systemjs": "0.19.26",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
-
+    "zone.js": "^0.6.12"
+  },
+  "devDependencies": {
     "canonical-path": "0.0.2",
-    "http-server": "^0.9.0",
-    "tslint": "^3.7.4",
-    "lodash": "^4.11.1",
+    "concurrently": "^2.0.0",
     "jasmine-core": "~2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-cli": "^0.1.2",
     "karma-htmlfile-reporter": "^0.2.2",
     "karma-jasmine": "^0.3.8",
+    "lite-server": "^2.2.0",
+    "lodash": "^4.11.1",
     "protractor": "^3.3.0",
     "rimraf": "^2.5.2"
   },
