--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "rootDir": "./app",
+    "outDir": "build/app"
   },
   "exclude": [
     "node_modules",
