--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "angular2-sass-gulp-heroku-boilerplate",
   "version": "1.0.0",
   "description": "Sample Angular2 application with gulp, sass and heroku integrated workflow.",
+  "engines": {
+    "node": "5.10.1"
+  },
   "scripts": {
     "start": "gulp cleanup && tsc && http-server build -p",
     "dev": "gulp clean && gulp cleanup && tsc && concurrently \"tsc -w\" \"lite-server -c bs-config.json\" \"gulp watch\"",
