--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .idea
-typings
+typings/**
 node_modules
 jspm_packages
 link-checker-results.txt
@@ -10,9 +10,12 @@ _test-output
 _temp
 
 !**/*e2e-spec.js
+!*e2e-spec.js
 !karma*.js
 !protractor*.js
-!wallaby.js
 !gulpfile.js
+!systemjs.config.js
+!typings/typings.d.ts
+!wallaby.js
 
 build
